More Intellij-driven cleanup